objects/vlocity_ins__OrchestrationDependencyDefinition__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__DependencyItemDefinitionId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dependency Item Definition</label>
        <referenceTo>vlocity_ins__OrchestrationItemDefinition__c</referenceTo>
        <relationshipLabel>Related Orchestration Items</relationshipLabel>
        <relationshipName>RelatedOrchestrationItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DependencyPlanDefinitionId__c</fullName>
        <formula>vlocity_ins__DependencyItemDefinitionId__r.vlocity_ins__OrchestrationPlanDefinitionId__c</formula>
        <label>Dependency Plan Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DependencyType__c</fullName>
        <label>Dependency Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Depends On</fullName>
                    <default>true</default>
                    <label>Depends On</label>
                </value>
                <value>
                    <fullName>Should Be Processed Before</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationItemDefinitionId__c</fullName>
        <label>Orchestration Item Definition</label>
        <referenceTo>vlocity_ins__OrchestrationItemDefinition__c</referenceTo>
        <relationshipLabel>Orchestration Dependency Definitions</relationshipLabel>
        <relationshipName>OrchestrationDependencyDefinitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationPlanDefinition__c</fullName>
        <formula>IF(  vlocity_ins__OrchestrationItemDefinitionId__r.vlocity_ins__OrchestrationPlanDefinitionId__c !=null &amp;&amp;  vlocity_ins__OrchestrationItemDefinitionId__r.vlocity_ins__OrchestrationPlanDefinitionId__c !=&apos;&apos;,  HYPERLINK(&apos;/&apos;&amp;vlocity_ins__OrchestrationItemDefinitionId__r.vlocity_ins__OrchestrationPlanDefinitionId__c, vlocity_ins__OrchestrationItemDefinitionId__r.vlocity_ins__OrchestrationPlanDefinitionId__r.Name) ,
 null)</formula>
        <label>Orchestration Plan Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Sales Top Order Item</fullName>
                </value>
                <value>
                    <fullName>Main Order Item</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                </value>
                <value>
                    <fullName>Swimlane</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Orchestration Dependency Definition</label>
    <nameField>
        <label>Dependency Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Dependency Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__CircularDependencyValidation</fullName>
        <active>true</active>
        <description>Orchestration Item Definition and Dependency Item Definition cannot have same value.</description>
        <errorConditionFormula>vlocity_ins__DependencyItemDefinitionId__c  =  vlocity_ins__OrchestrationItemDefinitionId__c</errorConditionFormula>
        <errorMessage>Orchestration Item Definition and Dependency Item Definition cannot have same value.</errorMessage>
    </validationRules>
</CustomObject>